feat: implement redis and bullmq
